--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div  class="clock">
 
-            <div style="--clr:#ff3d58 ; --h: 74px; " class="hand" id="hour"><i></i></div>
+            <div style="--clr:#59010d ; --h: 74px; " class="hand" id="hour"><i></i></div>
             <div style="--clr: #00a6ff ; --h: 84px; " class="hand" id="min"><i></i></div>
             <div style="--clr: #e0f316 ; --h: 94px; " class="hand" id="sec"><i></i></div>
 
